Set up https://github.com/knative-sandbox/operator (#1851)
* Set up https://github.com/knative-sandbox/operator

* Fix typos

* Run autogeneration, rather than generating by hand.

* Fix env vars and knative.dev

--- a/config/prow/core/config.yaml
+++ b/config/prow/core/config.yaml
@@ -109,6 +109,7 @@ tide:
   queries:
   - repos:
     - "google/knative-gcp"
+    - "knative-sandbox/operator"
     - "knative/caching"
     - "knative/client"
     - "knative/client-contrib"
