--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -402,6 +402,12 @@ presubmits:
     - integration-tests: false
     - go-coverage: false
 
+  knative-sandbox/operator:
+    - build-tests: true
+    - unit-tests: true
+    - integration-tests: true
+    - go-coverage: true
+
 periodics:
   knative/serving:
     - continuous: true
@@ -965,3 +971,17 @@ periodics:
     - auto-release: true
       dot-dev: true
       go113: true
+
+  knative-sandbox/operator:
+    - continuous: true
+      go113: true
+    - nightly: true
+      go113: true
+    - dot-release: true
+      go113: true
+      env-vars:
+      - ORG_NAME=knative-sandbox
+    - auto-release: true
+      go113: true
+      env-vars:
+      - ORG_NAME=knative-sandbox
