--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -262,6 +262,28 @@ test_groups:
 - name: ci-knative-eventing-operator-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-go-coverage
   short_text_metric: "coverage"
+- name: ci-knative-net-certmanager-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-net-certmanager-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-net-certmanager-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-certmanager-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-net-certmanager-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-certmanager-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-net-certmanager-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-certmanager-auto-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-net-certmanager-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-net-certmanager-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-net-contour-continuous
   gcs_prefix: knative-prow/logs/ci-knative-net-contour-continuous
   alert_stale_results_hours: 3
@@ -901,6 +923,35 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-eventing-operator-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: net-certmanager
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-net-certmanager-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-net-certmanager-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: dot-release
+    test_group_name: ci-knative-net-certmanager-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-net-certmanager-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: coverage
+    test_group_name: ci-knative-net-certmanager-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: net-contour
   dashboard_tab:
   - name: continuous
@@ -1338,6 +1389,7 @@ dashboard_groups:
   - "test-infra"
   - "serving-operator"
   - "eventing-operator"
+  - "net-certmanager"
   - "net-contour"
   - "net-http01"
   - "net-istio"
