highlight datarace errors

--- a/config/prow-staging/core/config.yaml
+++ b/config/prow-staging/core/config.yaml
@@ -60,6 +60,8 @@ deck:
           - 'panic: test timed out after.*$'
           # test case failure
           - 'FAIL:'
+          # data race errors
+          - 'WARNING: DATA RACE'
           # step failed
           - 'Step failed:'
           # boskos error
