Move github.com/knative-sandbox/operator to knative.dev/operator

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -412,9 +412,13 @@ presubmits:
 
   knative-sandbox/operator:
     - build-tests: true
+      dot-dev: true
     - unit-tests: true
+      dot-dev: true
     - integration-tests: true
+      dot-dev: true
     - go-coverage: true
+      dot-dev: true
 
 periodics:
   knative/serving:
@@ -997,13 +1001,17 @@ periodics:
   knative-sandbox/operator:
     - continuous: true
       go113: true
+      dot-dev: true
     - nightly: true
       go113: true
+      dot-dev: true
     - dot-release: true
       go113: true
+      dot-dev: true
       env-vars:
       - ORG_NAME=knative-sandbox
     - auto-release: true
       go113: true
+      dot-dev: true
       env-vars:
       - ORG_NAME=knative-sandbox
