--- a/config/prow/jobs/config.yaml
+++ b/config/prow/jobs/config.yaml
@@ -4953,6 +4953,37 @@ presubmits:
       - name: covbot-token
         secret:
           secretName: covbot-token
+  - name: pull-knative-sandbox-operator-upgrade-tests
+    agent: kubernetes
+    context: pull-knative-sandbox-operator-upgrade-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sandbox-operator-upgrade-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-operator-upgrade-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/operator
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-upgrade-tests.sh"
+        volumeMounts:
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: test-account
+        secret:
+          secretName: test-account
 periodics:
 - cron: "10 */2 * * *"
   name: ci-knative-serving-continuous
