--- a/config/prow/core/config.yaml
+++ b/config/prow/core/config.yaml
@@ -111,6 +111,7 @@ tide:
   queries:
   - repos:
     - "google/knative-gcp"
+    - "knative-sandbox/eventing-kafka"
     - "knative-sandbox/operator"
     - "knative/caching"
     - "knative/client"
