--- a/tools/config-generator/templates/prow_periodic_custom_go_coverage.yaml
+++ b/tools/config-generator/templates/prow_periodic_custom_go_coverage.yaml
@@ -1,22 +1,21 @@
 - cron: "[[.CronString]]"
   name: [[.PeriodicJobName]]
+  [[indent_section 6 "labels" .Base.Labels]]
   agent: kubernetes
-  [[indent_section 4 "labels" .Base.Labels]]
   decorate: true
-  [[indent_section 2 "extra_refs" .Base.ExtraRefs]]
+  [[indent_section 4 "decoration_config" .Base.DecorationConfig]]
   [[indent_array_section 4 "branches" .Base.Branches]]
   [[indent_array_section 4 "skip_branches" .Base.SkipBranches]]
+  [[indent_section 2 "extra_refs" .Base.ExtraRefs]]
   spec:
     containers:
     - image: [[.Base.Image]]
       imagePullPolicy: Always
       command:
-      - runner.sh
-      args:
-      - "[[.Base.Command]]"
-      [[indent_array_section 6 "" .Base.Args]]
-      [[indent_section 8 "securityContext" .Base.SecurityContext]]
+        - "/coverage"
+        args:
+        - "--artifacts=$(ARTIFACTS)"
+        - "--cov-threshold-percentage=[[.Base.GoCoverageThreshold]]"
       [[indent_section 6 "volumeMounts" .Base.VolumeMounts]]
       [[indent_section 6 "env" .Base.Env]]
-      [[indent_section 6 "resources" .Base.Resources]]
     [[indent_section 4 "volumes" .Base.Volumes]]
