--- a/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
+++ b/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
@@ -3,6 +3,7 @@
     - master
     agent: kubernetes
     decorate: true
+    [[.Base.Cluster]]
     [[indent_section 8 "labels" .Base.Labels]]
     [[.Base.PathAlias]]
     spec:
