--- a/tools/config-generator/templates/prow_presubmit_job.yaml
+++ b/tools/config-generator/templates/prow_presubmit_job.yaml
@@ -8,6 +8,7 @@
     decorate: true
     [[.Base.Optional]]
     [[.Base.PathAlias]]
+    [[.Base.Cluster]]
     [[indent_array_section 4 "branches" .Base.Branches]]
     [[indent_array_section 4 "skip_branches" .Base.SkipBranches]]
     spec:
